@@ -10,6 +10,7 @@ Additions:
     * Add SPACER part. This part are not putting anything into the canvas. So lighter and faster to
     process (Use it to replace RECT part that are never visible and never catch any event).
     * Add accessibility flags and API to retrieve the relevant part.
+    * Emit signal when flagged part size get to zero.
 
 Improvements:
     * Allocate once and reuse Evas_Map.
